--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "core-js": "^3.8.3",
+    "fs": "0.0.1-security",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-carousel-3d": "^1.0.1",
